Fix responsiveness breakpoints and padding on small screen.

--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,10 @@
     text-decoration: none;
   }
 
+  a.active {
+    @apply font-bold;
+  }
+
   .baskerville-regular {
     font-family: 'Libre Baskerville', serif;
     font-weight: 400;
